@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------
+r2200 | gaser | 2023-05-04 16:48:07
+
+Changed paths:
+ M CHANGES.txt
+ M cat_vol_tfce.m
+
+Changed: Updated help text for cat_vol_tfce.m and set defaults for E and H.
+------------------------------------------------------------------------
 r2199 | gaser | 2023-05-04 13:52:45
 
 Changed paths:
